removed overflow issue in some browsers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body {
 .body-container {
   display: flex;
   overflow: hidden;
-  width: 100vw;
+  width: 99.9vw;
   max-width: 1920px;
   margin: 0 auto;
 }
